# pondetiimi

./: .coveragerc  .gitignore  .pylintrc  README.md  doi_references.db  log.html  o.bib  output.xml  pyproject.toml  references.db  references2.db  report.html  schema_doi_references.sql  schema_references.sql  tasks.py  test.db
.github/workflows/: main.yml
documentation/: SQLschema.md  definition_of_done.md
src/: RobotLibrary.py  index.py  stub_io.py  test.db
src/entities/: article.py  book.py  inproceedings.py  reference.py
src/repositories/: reference_repository.py
src/services/: bibtex_service.py  database.py  doi_service.py  input_validation.py  konsoli_io.py  reference_manager.py  reference_service.py  sqldb_service.py  stub_reference_manager.py
src/tests/: article_test.py  bibtex_service_test.py  book_test.py  exporttobibtex.robot  inproceedings_test.py  input_validation_test.py  listallreferences.robot  newreference.robot  reference_manager_test.py  resource.robot  sqldb_service_test.py
src/ui/: ui.py
