[tool.poetry]
name = "pondetiimi"
version = "0.1.0"
description = ""
authors = ["zmejka <evgeniia.minaeva@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
bibtexparser = "^1.4.0"
pytest = "^7.2.0"
robotframework = "^6.0.1"
pylatexenc = "^2.10"
termcolor = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
